# Web_Sockets

./: Dockerfile  LICENSE  message.html  pyproject.toml  server.py
data/: data.json
