[tool.poetry]
name = "web-sockets"
version = "0.1.0"
description = ""
authors = ["MaksymYurkevych <102907831+MaksymYurkevych@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "web_sockets"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
